deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: version-update-minikube
spec:                           
  replicas: 2
  selector:
    matchLabels:
      app: kickstart
      version: blue
  template:
    metadata:
      labels:
        app: kickstart
        version: blue
    spec:
      containers:
      - name: kickstart
        image: kickstart:v1
        ports:
        - containerPort: 80
