deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: version-update-minikube
spec:                           
  replicas: 3
  selector:
    matchLabels:
      app: kickstart
      version: green
  template:
    metadata:
      labels:
        app: kickstart
        version: green
    spec:
      containers:
      - name: kickstart
        image: devopsroger25/version-update:v2
        ports:
        - containerPort: 80
